deploy/deployement.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pickly
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickly-posts
  namespace: pickly
  labels:
    app: pickly-posts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pickly-posts
  template:
    metadata:
      labels:
        app: pickly-posts
    spec:
      containers:
        - name: pickly-posts
          image: saifaldin3388/dummy_app:07
          command: ['node']
          args: ['index.js']
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickly-notifications
  namespace: pickly
  labels:
    app: pickly-notifications
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pickly-notifications
  template:
    metadata:
      labels:
        app: pickly-notifications
    spec:
      containers:
        - name: pickly-notifications
          image: saifaldin3388/dummy_app:07
          command: ['node']
          args: ['index.js']
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
