deploy/temp.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pickly
---
apiVersion: v1
kind: Pod
metadata:
  name: pickly-posts
  namespace: pickly
  labels:
    app: pickly-posts
spec:
  containers:
    - name: pickly-posts
      image: saifaldin3388/dummy_app:07
      command: ['node']
      args: ['index.js']
      ports:
        - name: web
          containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: pickly-notifications
  namespace: pickly
  labels:
    app: pickly-notifications
spec:
  containers:
    - name: pickly-notifications
      image: saifaldin3388/dummy_app:07
      command: ['node']
      args: ['index.js']
      ports:
        - name: web
          containerPort: 3000
          protocol: TCP
