deploy/services.yml
apiVersion: v1
kind: Service
metadata:
  name: pickly-posts
  namespace: pickly
spec:
  selector:
    app: pickly-posts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pickly-notifications
  namespace: pickly
spec:
  selector:
    app: pickly-notifications
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
