deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pickly
  namespace: pickly
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: 'posts.pickly.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pickly-posts
                port:
                  number: 80
    - host: 'notifications.pickly.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pickly-notifications
                port:
                  number: 80
